discussion/kv_engine/136612/136612_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-41510: Tidy HdrHistogram class

Tidy up HdrHistogram class by adding const and static keywords where
applicable and use fmt over std::stringstream. Also ensure we don't
perform self assignment in HdrHistogram's assignment operator.

Change-Id: I5498f3d2bf08afe7cb7269906b9f13076c5e2ab4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2020-10-06 08:34:56.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2020-10-06 08:37:46.000000000
Message: 
Patch Set 4:

(2 comments)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-10-06 08:59:34.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3427/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/utilities/hdrhistogram.h b/utilities/hdrhistogram.h
index 979b430..c429de9 100644
--- a/utilities/hdrhistogram.h
+++ b/utilities/hdrhistogram.h
@@ -90,7 +90,6 @@ public:
 
         Iterator(Iterator&amp;&amp; itr) = default;
 
-
         /**
          * Gets the next value and corresponding count from the histogram
          * Returns an optional pair, comprising of:

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3427/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4900/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/hdrhistogram_test.cc:472:30: error: no member named "getNextValueAndPercentile" in "HdrHistogram" [clang-diagnostic-error]
    while (auto pair = histo.getNextValueAndPercentile(iter)) {
                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4900/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/hdrhistogram_test.cc:472:30:
error: no member named "getNextValueAndPercentile" in "HdrHistogram" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4900/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26697/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/tests/module_tests/hdrhistogram_test.cc:472:30:
error: no member named "getNextValueAndPercentile" in "HdrHistogram"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26697/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30885/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\hdrhistogram_test.cc(472): error C2039: "getNextValueAndPercentile": is not a member of "HdrHistogram" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30885/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14091/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5275/ : FAILURE

Compile error at [2020-10-06T08:46:14.395Z] ../kv_engine/engines/ep/tests/module_tests/hdrhistogram_test.cc:472:30:
error: no member named "getNextValueAndPercentile" in "HdrHistogram"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5275/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6199/ : FAILURE

Compile error at [2020-10-06T08:56:01.053Z] ../kv_engine/engines/ep/tests/module_tests/hdrhistogram_test.cc:472:30:
error: ?const class HdrHistogram? has no member named ?getNextValueAndPercentile?; did you mean ?getValueAtPercentile??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6199/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6316/ : FAILURE

Compile error at [2020-10-06T08:53:44.640Z] ../kv_engine/engines/ep/tests/module_tests/hdrhistogram_test.cc:472:30:
error: ?const class HdrHistogram? has no member named ?getNextValueAndPercentile?; did you mean ?getValueAtPercentile??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6316/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6429/ : FAILURE

Compile error at [2020-10-06T08:57:05.542Z] ../kv_engine/engines/ep/tests/module_tests/hdrhistogram_test.cc:472:30:
error: no member named "getNextValueAndPercentile" in "HdrHistogram"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6429/ )
----------------------------------------------------------------------------------------------------------------------
